--- a/README.Rmd
+++ b/README.Rmd
@@ -16,32 +16,16 @@ knitr::opts_chunk$set(
 )
 ```
 
-
-Distill for R Markdown is a web publishing format optimized for scientific and technical communication. Distill articles include:
-
--   Reader-friendly typography that adapts well to mobile devices.
--   Features essential to technical writing like LaTeX math, citations, and footnotes.
--   Flexible figure layout options (e.g. displaying figures at a larger width than the article text).
--   Attractively rendered tables with optional support for pagination.
--   Support for a wide variety of diagramming tools for illustrating concepts.
--   The ability to incorporate JavaScript and D3-based interactive visualizations.
--   A variety of ways to publish articles, including support for publishing collections or articles as a Distill website.
-
-Distill for R Markdown is based on the [Distill web framework](https://github.com/distillpub/template), which was originally created for use in the Distill Machine Learning Journal. Distill for R Markdown combines the technical authoring features of Distill with [R Markdown](https://rmarkdown.rstudio.com/), enabling a fully reproducible workflow based on literate programming.
+Paquete de funciones propias.
 
 ## Installation
 
-Install the released version of distill from CRAN:
-
-    install.packages("distill")
-
-Or install the development version from GitHub with:
+Install the development version from GitHub with:
 
     # install.packages("devtools")
-    devtools::install_github("rstudio/distill")
+    devtools::install_github("rafzamb/raFunctions")
+    library(raFunctions)
 
-Learn more about using Distill at <https://rstudio.github.io/distill>.
+## Blog Posts
 
-## Get help
-
-The [RStudio community](https://community.rstudio.com/tag/distill) is a friendly place to ask any questions about distill.
+Blog de proyectos perosnales de ciencia de datos [Rafael Zambrano / Blog Posts](https://rafael-zambrano-blog-ds.netlify.app/blog.html)
