--- a/vignettes/automatic_tabs.Rmd
+++ b/vignettes/automatic_tabs.Rmd
@@ -7,6 +7,9 @@ date: 03-25-2021
 base_url: https:/rafzamb.github.io/sknifedatar/articles/automatic_tabs.html
 preview: automatic_tabs/icono.png
 bibliography: automatic_tabs/bib_automagic_tabs.bib
+opengraph:
+  image: 
+    src: "automatic_tabs/icono.png"
 output:
   distill::distill_article:
     self_contained: false
